--- a/source/jade/table-6.jade
+++ b/source/jade/table-6.jade
@@ -1,6 +1,10 @@
 extends _layout
 
-//------------------------------------------------
+block styles
+	link(href="css/lightSlider.css", rel="stylesheet")
+block scripts
+	script(src="js/jquery.lightSlider.min.js", type="text/javascript")
+
 block append content
 
 	mixin kir-name
@@ -38,7 +42,7 @@ block append content
 			h1 Информация о государственной поддержке
 		
 
-		.main-full
+		.main-left
 			//- #box
 			.box-articles.mar-bot-20
 				.heading.heading_normal Государственная поддержка (млн. руб.)
@@ -56,3 +60,6 @@ block append content
 			.mar-top-20.center
 				a(href="#").btn-grey-wide.inline Отмена
 				a(href="#").btn-orange-wide.inline Сохранить
+
+		.main-right
+			+report-archive
