--- a/source/jade/_sidebar.jade
+++ b/source/jade/_sidebar.jade
@@ -4,15 +4,15 @@
 	.menu
 		ul
 			li.home
-				a(href="#", data-menu="home") Рынок услуг
+				a(href="#", data-menu="home") Главная
 			li.info
-				a(href="#", data-menu="info") Информация
+				a(href="#", data-menu="info") Новости
 			li.events
-				a(href="#", data-menu="events") События
+				a(href="#", data-menu="events") Системно-<br>образующие<br>предприятия
 			li.talks
-				a(href="#", data-menu="home") Обсуждения
+				a(href="#", data-menu="home") Документы
 			li.search
-				a(href="docs.html") Поиск
+				a(href="docs.html") Личный кабинет
 	.side-extend-fix
 	.side-extend(data-menu="home")
 		.bname
