--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -327,7 +327,7 @@ color-orange()
 				&:hover
 					background alpha(#272729, .2); 
 				a
-					display block; padding 25px 20px 20px 75px;
+					display block; padding 25px 20px 20px 65px;
 					font-size 12px; color #E6E6E6; text-transform uppercase; tdn(); 
 			li.home
 				a
@@ -344,6 +344,7 @@ color-orange()
 			li.search
 				a
 					background url("../img/left/search.png") 15px center no-repeat;
+					white-space nowrap
 			li.active 
 				background #272729;
 	// -----------------------------------------------
