--- a/source/jade/_sidebar.jade
+++ b/source/jade/_sidebar.jade
@@ -13,6 +13,7 @@
 				a(href="#", data-menu="home") Документы
 			li.search
 				a(href="docs.html") Личный кабинет
+	.logo-bot
 	.side-extend-fix
 	.side-extend(data-menu="home")
 		.bname
