add search on docs page

--- a/source/jade/docs.jade
+++ b/source/jade/docs.jade
@@ -29,6 +29,10 @@ block append content
 		//------------------------------------------------
 		
 		.main-left
+			.search-con
+				form(action="#")
+					input(type="text", placeholder="Быстрый поиск по документам").inp-text
+					input(type="submit", value="").inp-submit
 			.box-docs
 				.item
 					.file-list
