--- a/source/jade/_mixin.jade
+++ b/source/jade/_mixin.jade
@@ -151,3 +151,12 @@ mixin report-archive
 						+archive-item
 						+archive-item
 						li.center Октябрь 2014
+
+mixin logo-bottom
+	.logos-bottom
+		.item
+			a(href="#") 
+				img(src="img/content/logo-minprom.png", alt="")
+		.item
+			a(href="#") 
+				img(src="img/content/logo-ibs.png", alt="")
