--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -155,7 +155,6 @@ i
 .btn-center-or
 	color-orange()
 	display inline-block
-
 input.btn-orange-wide
 	@extend .btn-orange-wide
 	background none
@@ -179,6 +178,8 @@ color-orange()
 .textarea-full
 	full() 
 	width 100%
+.feedback_big
+	text-transform uppercase
 
 // ===============================================
 
@@ -221,7 +222,6 @@ color-orange()
 			display block 
 			padding-left 20px
 			background url("../img/icons/comments.png") 0 1px no-repeat 
-			
 .imeta
 	div:last-child
 		padding-right 0
@@ -257,6 +257,8 @@ color-orange()
 			color-orange()
 .imeta_padside
 	padding 0 0 0 20px
+
+
 
 //	LAYOUT
 // ===============================================
@@ -702,6 +704,13 @@ color-orange()
 	background #1a1a1a; height 3px;
 .sep-space
 	height 30px
+
+.logos-bottom
+	padding-top 30px
+	text-align center
+	.item
+		display inline-block
+		padding 0 20px
 
 //	PADs MARGs
 // ===============================================
