add page news-2

--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -42,7 +42,6 @@ i
 .center
 	text-align center
 
-
 //	BTNs
 // ===============================================
 .btn-orange
@@ -2595,6 +2594,9 @@ textarea.inp-full
 	position relative
 	padding 20px;
 	border 1px solid #E5E5E5;
+	.rdm
+		margin-top 9px
+		display inline-block
 	.bname
 		@extend .box-info .bname
 		margin -20px -20px 10px -20px
