--- a/site/css/style.css
+++ b/site/css/style.css
@@ -8920,6 +8920,11 @@ textarea.inp-full {
   padding: 20px;
   border: 1px solid #e5e5e5;
 }
+.box-articles .rdm,
+.tabs-content .rdm {
+  margin-top: 9px;
+  display: inline-block;
+}
 .box-articles .bname,
 .tabs-content .bname {
   margin: -20px -20px 10px -20px;
