--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1206,8 +1206,7 @@ output {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 .form-control:focus {
   border-color: #66afe9;
@@ -2042,8 +2041,7 @@ input[type="button"].btn-block {
 }
 .fade {
   opacity: 0;
-  -webkit-transition: opacity 0.15s linear;
-          transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
 }
 .fade.in {
   opacity: 1;
@@ -2066,12 +2064,9 @@ tbody.collapse.in {
   position: relative;
   height: 0;
   overflow: hidden;
-  -webkit-transition-property: height, visibility;
-          transition-property: height, visibility;
-  -webkit-transition-duration: 0.35s;
-          transition-duration: 0.35s;
-  -webkit-transition-timing-function: ease;
-          transition-timing-function: ease;
+  transition-property: height, visibility;
+  transition-duration: 0.35s;
+  transition-timing-function: ease;
 }
 .caret {
   display: inline-block;
@@ -4122,8 +4117,8 @@ button.close {
   -webkit-transform: translate(0, -25%);
       -ms-transform: translate(0, -25%);
           transform: translate(0, -25%);
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-          transition: transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
 }
 .modal.in .modal-dialog {
   -webkit-transform: translate(0, 0);
@@ -4552,8 +4547,7 @@ ul.inline > *,
 a {
   color: #f85800;
   text-decoration: none;
-  -webkit-transition: all 0.3s ease-out;
-          transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 a:hover {
   text-decoration: underline;
@@ -4614,8 +4608,7 @@ input[type="phone"] {
   box-sizing: border-box;
   background: #fff;
   border: 1px solid #e6e6e6;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 input[type="text"].error,
 input[type="password"].error,
@@ -4636,8 +4629,7 @@ input[type="submit"] {
   color: #fff;
   font-size: 18px;
   border: none;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 input[type="submit"]:hover {
   background: #1aa257;
@@ -4652,8 +4644,7 @@ textarea {
   padding: 20px;
   background: #fff;
   border: 1px solid #e1e1e1;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 textarea:hover {
   box-shadow: 1px 1px 5px rgba(204,204,204,0.75) inset;
@@ -4845,9 +4836,7 @@ table td {
   display: inline-block;
   max-width: 200px;
   overflow: hidden;
-  overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
   white-space: nowrap;
   vertical-align: middle;
 }
@@ -5251,14 +5240,12 @@ input.btn-orange-wide {
   text-transform: uppercase;
   text-align: center;
   font-weight: 800;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .btn:hover,
 .btn-warning:hover,
 .btn-primary:hover {
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .btn a,
 .btn-warning a,
@@ -5565,6 +5552,12 @@ input.btn-orange-wide:hover {
   margin-left: 0;
   margin-right: 0;
 }
+.fl-left {
+  float: left;
+}
+.fl-right {
+  float: right;
+}
 .box-info .bcon.bcon--padding {
   padding: 0 20px;
 }
@@ -5603,8 +5596,7 @@ input.btn-orange-wide:hover {
   display: block;
   border-bottom: 1px solid #f97933;
   text-align: left;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .sidebar .menu ul li:hover {
   background: rgba(39,39,41,0.2);
@@ -5760,8 +5752,7 @@ input.btn-orange-wide:hover {
   border: 1px solid #f85800;
   border-radius: 2px;
   cursor: pointer;
-  -webkit-transition: opacity 0.3s ease-out;
-          transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
 }
 .sidebar .side-extend .bcat .bcat-name:hover {
   cursor: pointer;
@@ -5952,8 +5943,7 @@ input.btn-orange-wide:hover {
   -webkit-transform: rotate(270deg);
       -ms-transform: rotate(270deg);
           transform: rotate(270deg);
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .topper .user .arrow.open {
   -webkit-transform: rotate(90deg);
@@ -5980,8 +5970,7 @@ input.btn-orange-wide:hover {
   position: relative;
   border-bottom: 1px solid #323232;
   opacity: 0.7;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .user-drop__link:hover {
   opacity: 1;
@@ -7463,6 +7452,42 @@ textarea.inp-full {
   border-color: #f85800;
   background: url("../img/icons/plus-big-a.png") center 40px no-repeat;
 }
+.box-name {
+  padding-bottom: 20px;
+}
+.box-name h3 {
+  margin: 0;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.items-bds {
+  padding-bottom: 30px;
+}
+.items-bds_item {
+  padding: 20px 20px 10px 15px;
+  margin-bottom: 5px;
+  border: 1px solid #e5e5e5;
+}
+.items-bds_item:before,
+.items-bds_item:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.items-bds_item .name {
+  color: #323232;
+  font-size: 14px;
+}
+.items-bds_item .doc {
+  margin-top: -10px;
+  margin-right: 20px;
+  padding: 9px 0 6px 40px;
+  color: #f85800;
+  font-size: 14px;
+  font-weight: bold;
+  background: url("../img/icons/doc-blank.png") no-repeat;
+}
 .box-info,
 .box-info_noborder {
   margin-bottom: 20px;
@@ -8428,8 +8453,7 @@ textarea.inp-full {
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #fff;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .boxside-news .item:hover,
 .boxside-news-grey .item:hover {
@@ -8865,8 +8889,7 @@ textarea.inp-full {
   padding: 10px;
   margin: 10px;
   border: 1px solid #fff;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .news-items-prev .item:hover {
   border: 1px solid #ccc;
@@ -9589,8 +9612,7 @@ textarea.inp-full {
 .person {
   position: relative;
   text-align: center;
-  -webkit-transition: color 0.3s ease-out;
-          transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
 }
 .person a:hover {
   color: #f85800;
@@ -9692,8 +9714,7 @@ textarea.inp-full {
 }
 .doc-link span {
   color: #999;
-  -webkit-transition: color 0.3s ease-out;
-          transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
 }
 .line-text-grey {
   padding-bottom: 30px;
@@ -9752,8 +9773,7 @@ textarea.inp-full {
   text-transform: uppercase;
   text-decoration: none;
   font-family: 'latoblack';
-  -webkit-transition: color 0.3s ease-out;
-          transition: color 0.3s ease-out;
+  transition: color 0.3s ease-out;
 }
 .tabs__link:hover {
   color: #f85800;
@@ -9804,7 +9824,6 @@ textarea.inp-full {
   color: #fefefe;
   font-size: 12px;
   background-color: #b3b3b3;
-  background-image: -webkit-linear-gradient(bottom, #ff8c4d 0%, #ff8c4d 100%);
   background-image: linear-gradient(to top, #ff8c4d 0%, #ff8c4d 100%);
   border: none;
 }
@@ -9824,7 +9843,6 @@ textarea.inp-full {
   padding: 5px 0px;
 }
 .tags .tags-item:hover {
-  background-image: -webkit-linear-gradient(bottom, #f5f5f5 0%, #fefefe 100%);
   background-image: linear-gradient(to top, #f5f5f5 0%, #fefefe 100%);
   border: 1px solid rgba(0,0,0,0.1);
 }
@@ -9903,8 +9921,7 @@ footer .copy {
   right: 0px;
   bottom: 0px;
   opacity: 0.1;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .mCustomScrollBox .mCSB_scrollTools .mCSB_draggerContainer {
   position: absolute;
@@ -10370,7 +10387,6 @@ footer .copy {
   border-radius: 3px;
   background-color: #a6a6a6;
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.1);
-  background-image: -webkit-linear-gradient(bottom, #ddd 0%, #ddd 100%);
   background-image: linear-gradient(bottom, #ddd 0%, #ddd 100%);
 }
 .gr-chart .gr-chart-col .gr-chart-progress .gr-chart-progress-num.green {
@@ -10378,14 +10394,12 @@ footer .copy {
   border-radius: 0;
   box-shadow: none;
   background-color: #8fb753;
-  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
   background-image: linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
 }
 .gr-chart .gr-chart-col .gr-chart-progress .gr-chart-progress-num.red {
   border: 0;
   box-shadow: none;
   background-color: #ff5763;
-  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
   background-image: linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
 }
 .gr-chart .gr-chart-col .gr-chart-progress .gr-chart-progress-num.blue {
@@ -10393,7 +10407,6 @@ footer .copy {
   border-radius: 0;
   box-shadow: none;
   background-color: #71a9bb;
-  background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
   background-image: linear-gradient(bottom, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0) 100%);
 }
 .gr-chart .gr-chart-col .gr-chart-date {
@@ -10875,8 +10888,7 @@ footer .copy {
   top: 1px;
   left: -40px;
   background: url("../img/icons/circular-delete.png") no-repeat center, #000;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .articles__edit-images-list-item--edit:hover {
   left: 0;
@@ -10899,16 +10911,14 @@ footer .copy {
   width: 32px;
   margin: 17px auto 8px;
   background: url("../img/icons/circular-add.png") no-repeat center;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .articles__edit-images-list-item--add-text {
   color: #ccc;
   font-size: 12px;
   width: 80px;
   margin: 0 auto;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .articles__edit-images-list-item--add:hover {
   cursor: pointer;
@@ -11196,8 +11206,7 @@ input.inp-radio + label {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .select-wrap .select .title {
   padding: 0 !important;
@@ -11221,8 +11230,7 @@ input.inp-radio + label {
   top: 21px;
   content: " ";
   background: url("../img/arrow-down.png") 0 0 no-repeat;
-  -webkit-transition: 0.3s ease-out;
-          transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 .select-wrap ul.option-list {
   display: none;
@@ -11515,6 +11523,61 @@ input.inp_orange {
 .boxside-list .lSPrev:hover,
 .boxside-list .lSNext:hover {
   text-decoration: none;
+}
+.pager-nav {
+  text-align: center;
+}
+.pager-nav ul {
+  display: inline-block;
+  margin: 0;
+  list-style: none;
+}
+.pager-nav ul li {
+  margin: 0;
+  list-style: none;
+}
+.pager-nav ul:before,
+.pager-nav ul:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.pager-nav li {
+  float: left;
+}
+.pager-nav a {
+  display: block;
+  font-size: 12px;
+  color: #f85800;
+  padding: 5px 10px;
+}
+.pager-nav a:hover {
+  text-decoration: none;
+}
+.pager-nav span {
+  display: block;
+  padding: 5px 10px;
+  font-size: 12px;
+}
+.pager-nav li.prev a,
+.pager-nav li.next a {
+  display: block;
+  background: url("../img/icons/arrow-grey-right.png") center center no-repeat;
+  border: 1px solid #f2f2f2;
+}
+.pager-nav li.prev a {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.pager-nav li.is-active {
+  padding: 0 3px;
+}
+.pager-nav li.is-active a {
+  padding: 5px 7px;
+  border: 1px solid #f2f2f2;
+  background: #fafafa;
+  color: #c8c8c8;
 }
 @-webkit-keyframes opacity-fade {
   0% {
