--- a/source/jade/table-1.jade
+++ b/source/jade/table-1.jade
@@ -91,11 +91,11 @@ block append content
 					+kir("ВСЕГО", "1")
 					+kir-currency
 
-
-			//- #action
-			.mar-top-20.center
-				a(href="#").btn-grey-wide.inline Отмена
-				a(href="#").btn-orange-wide.inline Сохранить
-
 		.main-right
 			+report-archive
+
+		//- #action
+		.mar-top-20.center
+			a(href="#").btn-grey-wide.inline Отмена
+			a(href="#").btn-orange-wide.inline Сохранить
+			a(href="#").btn-orange-wide.inline Опубликовать
