add page monitoring

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -11365,7 +11365,7 @@ a.sort-link.lines.is-active span {
   position: relative;
   display: table-cell;
   box-sizing: border-box;
-  padding: 5px 10px;
+  padding: 10px 10px;
   color: #333;
   font-size: 12px;
 }
@@ -11392,6 +11392,14 @@ a.sort-link.lines.is-active span {
 .reporting-line_names .reporting-item {
   color: #999;
   font-size: 14px;
+}
+.reporting_name.ok {
+  padding-left: 20px;
+  background: url("../img/icons/report-green.png") 0 8px no-repeat;
+}
+.reporting_name.fault {
+  padding-left: 20px;
+  background: url("../img/icons/report-red.png") 0 8px no-repeat;
 }
 .link-edit {
   display: inline-block;
