--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4476,7 +4476,7 @@ a.sort-link.lines.is-active
 	position relative
 	display table-cell
 	full()
-	padding 5px 10px
+	padding 10px 10px
 	color #333
 	font-size 12px
 .reporting_num
@@ -4497,7 +4497,12 @@ a.sort-link.lines.is-active
 	.reporting-item
 		color #999
 		font-size 14px
-		
+.reporting_name.ok
+	padding-left 20px
+	background url("../img/icons/report-green.png") 0 8px no-repeat
+.reporting_name.fault
+	padding-left 20px
+	background url("../img/icons/report-red.png") 0 8px no-repeat
 
 .link-edit
 	display inline-block
