--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4540,7 +4540,13 @@ a.sort-link.lines.is-active
 	text-align center
 	min-width 115px
 	vertical-align top
-
+.kir-headtime
+	padding-left 20px
+	padding-bottom 10px
+	font-weight bold
+	text-transform uppercase
+	font-size 16px
+	color #353535
 
 input.inp_kir
 	width 115px
@@ -4639,3 +4645,20 @@ input.inp_orange
 			border 1px solid #f2f2f2
 			background #fafafa
 			color #c8c8c8
+		
+
+.page-desc
+	margin-bottom 20px
+	padding 15px 20px
+	border 1px solid #e5e5e5
+	.norm
+		padding-bottom 5px
+		color #353535
+	.grey 
+		padding-bottom 10px
+		text-transform uppercase
+	h3
+		margin 0
+		font-size 14px
+		font-weight normal
+		text-transform uppercase
