--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4662,3 +4662,7 @@ input.inp_orange
 		font-size 14px
 		font-weight normal
 		text-transform uppercase
+.page-desc_no-bd
+	margin-bottom 0
+	padding-bottom 0
+	border none
