--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4492,6 +4492,14 @@ a.sort-link.lines.is-active
 		width 17px
 		height 17px
 		background url("../img/icons/ok-blue.png") no-repeat
+.reporting_file
+	width 200px
+	.ins
+		padding 5px 0 0px 25px
+		background url("../img/icons/doc-sm.png") no-repeat
+	a
+		margin-left 10px
+	
 .reporting-line_names 
 	border none
 	.reporting-item
@@ -4503,6 +4511,7 @@ a.sort-link.lines.is-active
 .reporting_name.fault
 	padding-left 20px
 	background url("../img/icons/report-red.png") 0 8px no-repeat
+
 
 .link-edit
 	display inline-block
