--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1651,6 +1651,8 @@ textarea.inp-full
 
 .items-bds
 	padding-bottom 30px
+	.page-desc
+		margin-bottom 10px
 .items-bds_item
 	padding 20px 20px 10px 15px
 	margin-bottom 5px
@@ -4657,6 +4659,7 @@ input.inp_orange
 		
 
 .page-desc
+	position relative
 	margin-bottom 20px
 	padding 15px 20px
 	border 1px solid #e5e5e5
@@ -4675,3 +4678,26 @@ input.inp_orange
 	margin-bottom 0
 	padding-bottom 0
 	border none
+
+
+.check-ttu
+	padding-top 10px
+	padding-right 300px
+	lino()
+	li
+		margin 5px
+	a
+		text-transform uppercase
+			
+.download-report
+	position absolute 
+	right 20px 
+	bottom 20px
+	padding 10px
+	padding-left 50px
+	border 1px solid #e5e5e5
+	background #fafafa url("../img/icons/document.png") 15px center no-repeat
+	a
+		display block
+		margin-bottom 5px
+		text-transform uppercase
