--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4577,6 +4577,7 @@ a.sort-link.lines.is-active
 	min-width 600px
 .kir
 	display table-row
+	width 100%
 .kir__col
 	position relative
 	display table-cell
@@ -4586,10 +4587,10 @@ a.sort-link.lines.is-active
 	color #333
 	font-size 14px
 .kir__col_wide
-	width 250px
+	width 30%
 .kir__col_med
 	text-align center
-	min-width 115px
+	width 10%
 	vertical-align top
 .kir-headtime
 	padding-left 20px
@@ -4600,10 +4601,11 @@ a.sort-link.lines.is-active
 	color #353535
 
 input.inp_kir
-	width 115px
+	width 70px
 	full() 
+	padding 10px 10px
 	margin-bottom 0
-	font-size 16px
+	font-size 12px
 	text-align center
 	&:hover, &:focus
 		box-shadow 0 1px 11px rgba(1, 1, 1, 0.1)
