--- a/site/css/style.css
+++ b/site/css/style.css
@@ -10095,6 +10095,12 @@ footer .copy {
   padding: 60px 40px;
   border: 2px solid #1a1a1a;
 }
+.popup-error {
+  width: 400px;
+  font-size: 16px;
+  color: #333;
+  text-align: center;
+}
 .box-info .bcon-mod {
   padding: 0 20px;
 }
