--- a/source/jade/_head.jade
+++ b/source/jade/_head.jade
@@ -24,3 +24,5 @@ head
 	script(src="js/jquery.remodal.js", type="text/javascript")
 	block scripts
 	script(src="js/functions.js", type="text/javascript")
+
+	script(src="js/functions.js", type="text/javascript")
