--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -3385,7 +3385,11 @@ footer
 		background #fff
 		padding 60px 40px
 		border 2px solid #1a1a1a
-
+.popup-error
+	width 400px
+	font-size 16px
+	color #333
+	text-align center
 
 //	.bcon-mod
 // ===============================================
